abstract Structure holds common code; move laws into structures.
not working --- samplers map keys don't match calls